--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta name="description" content="Lista estudiantes materia JS de NEXTU">
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="css/estilos.css">
+<script src="js/jquery-3.2.1.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
 <title>Evaluación Final - JS lo esencial</title>
 </head>
@@ -54,6 +56,8 @@
                           <th>Nota 1</th>
                           <th>Nota 2</th>
                           <th>Prom</th>
+													<th>Editar</th>
+													<th>Eliminar</th>
                       </thead>
                       <tbody id="content_mlest">
                       </tbody>
@@ -70,8 +74,8 @@
 					<div id="contentMensajes">
 						<div id="mensajes">
 							<ul id="mensajes_aliento">
-										<li onClick="elmejor(estudiantes)">El mejor</li>
-										<li onClick="masesfuerzo(estudiantes)">Necesita más Esfuerzo</li>
+										<li id="elMejorE">El mejor</li>
+										<li id="necesitaMasE">Necesita más Esfuerzo</li>
 								</ul>
 								<p id="nohayDatos"></p>
 								<p id="elmejorestudiante">Queremos felicitar a: <br><span id="nombre_mejor"></span><br> Por su dedicación en la certificación </p>
@@ -83,13 +87,13 @@
 								<p id="nohayDatosGP" style="width:100%; margin-bottom:10px;"></p>
 								<div id="ganadoresyperdedores">
 										<div id="ganadores">
-												<h4 onClick="lavanGanando(estudiantes)">GANANDO</h4>
+												<h4 id="vanGanando">GANANDO</h4>
 												<ul id="losganadores">
 
 												</ul>
 										</div>
 										<div id="perdedores">
-												<h4 onClick="lavanPerdiendo(estudiantes)">PERDIENDO</h4>
+												<h4 id="vanPerdiendo">PERDIENDO</h4>
 												<ul id="losperdedores">
 
 												</ul>
@@ -103,6 +107,6 @@
     <footer>
         <span>Design by Sebastian Pérez Quintero - CopyRight&copy;</span>
     </footer>
-		<script type="text/javascript" src="js/javascript.js"></script>
+		<!--<script type="text/javascript" src="js/javascript.js"></script>-->
 </body>
 </html>
