--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<button id="ingresarDatos">Ingresar Datos</button>
 						</div>
 						<br/>
-						<div style="height:80px; overflow:hidden;">
+						<div style="height:auto; overflow:hidden;">
 							<span id="mensajeProceso"></span>
 						</div>
 					</section>
